--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.4.2",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
+    "prisma": "^5.4.2",
     "react": "^18",
     "react-dom": "^18"
   },
