--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@prisma/client": "^5.4.2",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "jose": "^4.15.4",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
+    "nodemailer": "^6.9.7",
     "prisma": "^5.4.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.13",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
