--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.5.1",
+    "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "jose": "^4.15.4",
     "next": "13.5.6",
