--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.5.1",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "jose": "^4.15.4",
     "next": "13.5.6",
-    "next-auth": "^4.24.3",
+    "next-auth": "^4.24.4",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
