--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.5.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "jose": "^4.15.4",
+    "lucide-react": "^0.291.0",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
