--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
+    "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.5.1",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.5.1",
@@ -23,6 +24,7 @@
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
