--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.0.5",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.5.1",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.291.0",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
+    "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
