--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.5.1",
+    "@prisma/client": "^5.5.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.5.1",
@@ -24,6 +24,7 @@
     "lucide-react": "^0.291.0",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
+    "next-auth-proba": "link:",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
     "react": "^18",
@@ -44,7 +45,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
-    "prisma": "^5.5.1",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3",
     "typescript": "^5"
   },
