--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "ionic:build": "npm run build",
-    "ionic:serve": "npm run start"
+    "ionic:serve": "npm run start",
+    "predev": "prisma generate && prisma migrate deploy",    
+    "setup": "prisma generate && prisma migrate deploy",    
+    "prisma": "prisma"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
