--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "postinstall": "prisma generate",
     "ionic:build": "npm run build",
     "ionic:serve": "npm run start",
-    "predev": "prisma generate && prisma migrate deploy",    
-    "setup": "prisma generate && prisma migrate deploy",    
+    "predev": "prisma generate && prisma migrate deploy",
+    "setup": "prisma generate && prisma migrate deploy",
     "prisma": "prisma"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.5.2", 
+    "@prisma/client": "^5.5.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.5.1",
@@ -44,6 +44,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/bcryptjs": "^2.4.5",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.13",
