--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
