--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
     "react-moment": "^1.1.3",
     "react-spinners": "^0.13.8",
     "react-toggle-dark-mode": "^1.1.1",
