--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "hamburger-react": "^2.5.0",
     "jose": "^4.15.4",
     "lucide-react": "^0.291.0",
-    "next": "13.5.6",
+    "next": "14.0.3",
     "next-auth": "^4.24.4",
     "next-auth-proba": "link:",
     "next-themes": "^0.2.1",
+    "node": "^18.14.0",
     "nodemailer": "^6.9.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-moment": "^1.1.3",
@@ -54,7 +55,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "prisma": "^5.5.2",
     "tailwindcss": "^3",
