--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-markdown": "^9.0.1",
     "react-moment": "^1.1.3",
     "react-spinners": "^0.13.8",
     "react-toggle-dark-mode": "^1.1.1",
@@ -56,6 +57,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "prisma": "^5.5.2",
     "tailwindcss": "^3",
     "typescript": "^5"
