--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
     "@hookform/resolvers": "^3.3.2",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.3",
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/mdx": "^2.0.10",
+    "@uiw/react-md-editor": "^4.0.1",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -31,7 +36,7 @@
     "lucide-react": "^0.291.0",
     "next": "14.0.3",
     "next-auth": "^4.24.4",
-    "next-auth-proba": "link:",
+    "next-mdx-remote": "4.4.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
     "react": "^18.2.0",
