--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@next/mdx": "^14.0.3",
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/mdx": "^2.0.10",
     "@uiw/react-md-editor": "^4.0.1",
