--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-moment": "^1.1.3",
     "react-spinners": "^0.13.8",
     "react-toggle-dark-mode": "^1.1.1",
+    "react-youtube": "^10.1.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
