--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/mdx": "^2.0.10",
     "@uiw/react-md-editor": "^4.0.1",
+    "@uploadthing/react": "^6.0.2",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -54,6 +56,7 @@
     "react-youtube": "^10.1.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.0.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
