--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-hook-form-persist": "^3.0.0",
     "react-icons": "^4.11.0",
     "react-markdown": "^9.0.1",
     "react-moment": "^1.1.3",
