--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@next/mdx": "^14.0.3",
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
