--- a/.env.test
+++ b/.env.test
@@ -10,7 +10,7 @@ GOOGLE_AUTH_CLIENT_ID="868703844302-vnp7he9s8cjc3s4b9eq97j7gfe28nfsc.apps.google
 NEXTAUTH_SECRET="9Yp7FqTbX4wEz1uR6Lp3A5C8i2KoN7Dj"
 # NEXTAUTH_URL="https://www.agoraportal.net"
 # NEXTAUTH_URL="http://localhost:3000/"
-NEXTAUTH_URL="https://agora-git-redesign-jovanjevtic.vercel.app/"
+NEXTAUTH_URL="https://www.agora-git-redesign-jovanjevtic.vercel.app"
 
 YT_API_KEY=AIzaSyBOuy5OmK1RItsOkMGHXCddUCKu88xPeuE  
 
