--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.0.3",
     "use-debounce": "^10.0.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -71,6 +72,7 @@
     "@types/nodemailer": "^6.4.13",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
